# kubevirt-oc-mcp

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/mcp/: protocol.rs
src/tools/: oc.rs
