[package]
name = "kubevirt-oc-mcp"
version = "0.1.0"
edition = "2021"
description = "oc/virtctl CLI MCP server for kubevirt-ui: structured Kubernetes and KubeVirt operations without shell injection"
rust-version = "1.75"

[[bin]]
name = "kubevirt-oc-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
